k8s/components/apps/auth/gotrue-auth/gotrue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotrue-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotrue-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gotrue-auth
    spec:
      containers:
        - name: gotrue
          image: supabase/gotrue:v2.188.1
          ports:
            - containerPort: 9999
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
      restartPolicy: Always
