k8s/components/apps/auth/gotrue-auth/gotrue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotrue-auth
spec:
  selector:
    app: gotrue-auth
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999
