k8s/components/apps/auth/gotrue-auth/gotrue/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotrue-auth-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "auth.example.com" # patched by overlay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotrue-auth
                port:
                  number: 9999
